--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
     height: 100vh;
     background-color: rgb(255, 0, 0);
     display: none;
+    transform-origin: right;
    
 }
 
@@ -49,13 +50,12 @@
     width : 40px;
     height : 40px;
     cursor: pointer;
-    /* position: relative; */
     z-index: 110;
 }
 
 #burger span{
     width : 100%;
-    height : 4px;
+    height : 5px;
     background-color: black;
     display: block;
     position: absolute;
@@ -75,7 +75,7 @@
     content : '';
     position: absolute;
     width: 100%;
-    height: 4px;
+    height: 5px;
     background-color: black;
 }
 
@@ -95,7 +95,7 @@ transform: translateY(10px);
 display: none;
 }
 
-
+/* active div burger when click*/
 #burger.active span::after{
     display : block;
     transform: translateY(0px) rotate(-45deg);
